# vchat

./: README.md  pyproject.toml
vchat/: __main__.py  chat.py  cli.py  config.py  defaults.py  history.py  input.py  render.py  screen.py  search.py  styles.py
