[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vchat"
version = "0.1.0"
description = "AI Chat CLI tool"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
vchat = "vchat.cli:main"

[tool.setuptools.packages.find]
include = ["vchat*"]
